crates/wac-parser/tests/resolution/fail/invalid-value-type.wac
package test:comp;

interface i {

}

type x = func(i: i);